resource: solving layout issues

--- a/assets/css/css5-image-slider.css
+++ b/assets/css/css5-image-slider.css
@@ -53,6 +53,11 @@
 .css5-image-slider__container {
   width: 100%;
   overflow: hidden;
+  box-sizing: border-box;
+}
+.css5-image-slider__container > * {
+  box-sizing: border-box;
+  margin: 0;
 }
 .css5-image-slider__container > figure.slider {
   position: relative;
